# AWSLambda-and-Rust

./: Cargo.toml  README.md  SQS_Receive_From_Trigger.rs  dynamoDBStream_to_SNS.rs  dynamoDB_Operations.rs
