[package]
name = "SQS_Receive_From_Trigger"
version = "0.1.0"
authors = ["iram6"]
edition = "2018"


[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
serde_with = { version = "1.4.0", features = ["json"]}
log = "^0.4"
simple_logger = "^1"
tokio = { version = "0.2", features = ["full"] }
# for dynamodb and sns operations
rusoto_core = "0.44.0"
rusoto_sns = "0.44.0"
rusoto_dynamodb = "0.44.0"
[[bin]]
name = "bootstrap"
path = "src/main.rs"